# mediscara.pdf-generator

./: .gitignore  readme.md  requirements.txt  setup.cfg
.github/workflows/: sync-2-upstream.yml
src/pdfgen/: __init__.py  main.py  renderer.py  yaml.py
src/pdfgen/pdf/: objects.py
tests/: test_parser.py  test_renderer.py
