[metadata]
name = pdf-generator
version = attr: pdfgen.__version__
author = Peter Puska
author_email = ppuska@lasram.hu

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pyyaml >= 6
    reportlab >= 3.6
    dacite >= 1.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pdfgen = pdfgen.main:main